-- http://haskell.org/cabal/users-guide/
name:                Yi-Plugin

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Tools for improved yi

-- A longer description of the package.
-- description:
license:             MIT
license-file:        LICENSE
author:              Eleazar Díaz Delgado
maintainer:          eletodoguaysinc@gmail.com
category:            Plugin
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs: src
  default-language: Haskell2010
  -- Modules exported by the library.
  exposed-modules:
        Yi.GhcMod.GhcMod

  -- Modules included in this library but not exported.
  -- other-modules:

  -- Other library packages from which modules are imported.
  build-depends:       base ==4.6.*, yi==0.6.7.*, ghc-mod

